Multiple calls to suspend media playback for the same page may result in resuming media playback too soon https://bugs.webkit.org/show_bug.cgi?id=217228 rdar://problem/69709346

Reviewed by Eric Carlson.

Source/WebKit:

Calls to suspend/resume media playback should always be called in
pairs. The current implementation resumes media playback on the first
call to resumeAllMediaPlayback even if multiple calls to suspendAllMediaPlayback
have been made. This patch adds a counter to track how many calls to
suspendAllMediaPlayback have occurred, and only resumes once the
counter reaches 0.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _suspendMediaPlaybackCounter]):
SPI for test purposes.

* UIProcess/API/Cocoa/WKWebViewPrivate.h:
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::suspendAllMediaPlayback):
(WebKit::WebPageProxy::resumeAllMediaPlayback):
Never let the counter get below 0.

* UIProcess/WebPageProxy.h:
(WebKit::WebPageProxy::suspendMediaPlaybackCounter):

Tools:

Add API test coverage. Fix the existing SuspendResumeAllMediaPlayback
test which had a small JavaScript bug, and was missing a call to
TestWebKitAPI::Util::run(&didReject) which allowed the bug to go
unnoticed.

* TestWebKitAPI/Tests/WebKitCocoa/StopSuspendResumeAllMedia.mm:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/230016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267899 268f45cc-cd09-0410-ab3c-d52691b4dbfc